[tool.poetry]
name = "tpdb"
version = "1.0"
description = ""
authors = ["DirtyRacer1337 <DirtyRacer@ya.ru>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
scrapy = "*"
tldextract = "*"
pymongo = "*"
python-slugify = "*"
dateparser = "*"
requests = "*"
yapf = "*"
extruct = "*"
mdutils = "*"
PySide6 = "*"
Unidecode = "*"
dpath = "*"
scrapy_splash = "*"
googletrans = "*"
deep_translator = "*"
pytesseract = "*"
pillow = "*"
furl = "*"
pycountry = "*"
httpx = {extras = ["http2", "socks"], version = "*"}
chompjs = "*"
cleantext = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
exclude = [".git", "__pycache__"]
line-length = 320
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E722"]

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
